--- a/clv-game-chuachua/src/main/webapp/resources/css/style.css
+++ b/clv-game-chuachua/src/main/webapp/resources/css/style.css
@@ -46,7 +46,7 @@ var {
 body {
     width: 100%;
     height: 100%;
-    font-family: "Helvetica", "Microsoft YaHei";
+    font-family: "Microsoft YaHei";
     font-size: 14px;
     color: #818FA8;
     background-color: #F2F5F7 ;
