更新（多端样式统一、添加日志等信息

--- a/clv-game-chuachua/src/main/webapp/resources/css/game.css
+++ b/clv-game-chuachua/src/main/webapp/resources/css/game.css
@@ -37,11 +37,13 @@
 	font-size:50px;
 	color:#fff;
 	writing-mode:vertical-rl;
+	-webkit-writing-mode: vertical-rl;
 }
 .time {
 	font-size:50px;
 	color:#fff;
 	writing-mode:vertical-lr;
+	-webkit-writing-mode: vertical-lr;
 }
 .bricks {
 	outline:#fff solid thin;
